# arithkit

./: CMakeLists.txt  README.md
cmake/: arithkit_deps.cmake
examples/: CMakeLists.txt  affine_vs_interval.cpp  batch_polynomial.cpp  combinatorics.cpp  composition_algebra.cpp  compute_pi.cpp  fixed_point_filter.cpp  geometric_algebra.cpp  higher_order_ad.cpp  hilbert_matrix.cpp  linear_transforms.cpp  mandelbrot.cpp  modular_arithmetic.cpp  newton_autodiff.cpp  oriented_geometry.cpp  polynomial_ops.cpp  root_isolation.cpp  rotation_3d.cpp  sparsity_detection.cpp
src/include/: CMakeLists.txt
src/include/arithkit/: affine.hpp  arbitrary_float.hpp  bigint.hpp  clifford.hpp  complex.hpp  concepts.hpp  config.hpp.in  dual.hpp  fixed_point.hpp  fraction.hpp  grassmann.hpp  interval.hpp  jet.hpp  matrix.hpp  modint.hpp  octonion.hpp  polynomial.hpp  quaternion.hpp  simd.hpp  sparsity.hpp
src/include/arithkit/concepts/: additive_abelian_group.hpp  additive_group.hpp  additive_magma.hpp  additive_monoid.hpp  additive_semigroup.hpp  algebra.hpp  alternative_division_algebra.hpp  commutative_magma_augmentation.hpp  commutative_magma_with_identity_augmentation.hpp  commutative_ring.hpp  division_ring.hpp  euclidean_domain.hpp  field.hpp  integral_domain.hpp  interval_arithmetic.hpp  linear_augmentation.hpp  magma_augmentation.hpp  module.hpp  monoid_augmentation.hpp  multiplicative_magma.hpp  multiplicative_monoid.hpp  multiplicative_semigroup.hpp  multiplicative_unital_magma.hpp  non_associative_ring.hpp  normed.hpp  ordered_field.hpp  ring.hpp
src/include/arithkit/traits/: identity_element.hpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  affine_test.cpp  arbitrary_float_test.cpp  bigint_test.cpp  builtin_laws_test.cpp  clifford_test.cpp  complex_test.cpp  dual_test.cpp  fixed_point_test.cpp  fraction_test.cpp  grassmann_test.cpp  interval_test.cpp  jet_test.cpp  matrix_test.cpp  modint_test.cpp  octonion_test.cpp  polynomial_test.cpp  quaternion_test.cpp  simd_test.cpp  sparsity_test.cpp
test/unit/laws/: additive_abelian_group_laws.hpp  additive_group_laws.hpp  additive_monoid_laws.hpp  additive_semigroup_laws.hpp  affine_arithmetic_laws.hpp  alternative_division_algebra_laws.hpp  approx_equal.hpp  approx_ordered_field_laws.hpp  clifford_algebra_laws.hpp  commutative_magma_augmentation_laws.hpp  commutative_magma_with_identity_augmentation_laws.hpp  commutative_ring_laws.hpp  complex_field_extension_laws.hpp  complex_ring_extension_laws.hpp  field_laws.hpp  (+15 more)
